adição paginas, ajuste CSS

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
     <section class="categories">
         <h2>Categorias</h2>
-        <a class="category-card" href="categoria.php?categoria=categoria1">Placas de vídeo</a>
-        <a class="category-card" href="categoria.php?categoria=categoria2">Placa Mãe</a>
-        <a class="category-card" href="categoria.php?categoria=categoria3">Gamer</a>
+        <a class="category-card" href="./produtos.php">Placas de vídeo</a>
+        <a class="category-card" href="./placamae.html">Placa Mãe</a>
+        <a class="category-card" href="./gamer.html">Gamer</a>
     </section>
 
     <section class="carousel">
@@ -45,21 +45,21 @@
             </div>
             <div class="product-slide">
                 <img src="./img/monitor-gamer-superframe-vision-ultra-34-pol-curvo-ultrawide-25k-quad-hd-va-99-srgb-hdr-freesync-1ms-165hz-hdmidp-white-sfvc-3415-2_174751.jpg" alt="Produto 2">
-                <h3>Produto 2</h3>
+                <h3>Produto 3</h3>
                 <p>Descrição do Produto 2.</p>
                 <p class="price">R$ 1499,99</p>
                 <button class="add-to-cart">Adicionar ao Carrinho</button>
             </div>
             <div class="product-slide">
                 <img src="./img/monitor-gamer-superframe-vision-ultra-34-pol-quad-hd-ips-g-syncfreesync-1ms-165hz-hdmidp-sfv3415_148624.webp" alt="Produto 2">
-                <h3>Produto 2</h3>
+                <h3>Produto 4</h3>
                 <p>Descrição do Produto 2.</p>
                 <p class="price">R$ 1499,99</p>
                 <button class="add-to-cart">Adicionar ao Carrinho</button>
             </div>
             <div class="product-slide">
                 <img src="./img/razer-kraken-main-v2.webp" alt="Produto 2">
-                <h3>Produto 2</h3>
+                <h3>Produto 5</h3>
                 <p>Descrição do Produto 2.</p>
                 <p class="price">R$ 1499,99</p>
                 <button class="add-to-cart">Adicionar ao Carrinho</button>
@@ -71,23 +71,23 @@
         <div class="product-grid">
             <div class="product-card">
                 <img src="./img/placa-de-video-rtx-4060-ti-ventus-msi-nvidia-geforce-8-gb-gddr6-dlss-ray-tracing_1684770175_gg.jpg" alt="Produto 1">
-                <h3>Produto 1</h3>
+                <h3>Geforce RTX 4060-TI MSI</h3>
                 <p>Descrição do Produto 1.</p>
-                <p class="price">R$ 999,99</p>
+                <p class="price">R$ 2560,00</p>
                 <button class="add-to-cart">Adicionar ao Carrinho</button>
             </div>
             <div class="product-card">
                 <img src="./img/placa-de-video-rtx-4070-ti-ex-gamer-white.jpg" alt="Produto 1">
-                <h3>Produto 1</h3>
+                <h3>Geforce RTX 4070 Galax</h3>
                 <p>Descrição do Produto 1.</p>
-                <p class="price">R$ 999,99</p>
+                <p class="price">R$ 2800,99</p>
                 <button class="add-to-cart">Adicionar ao Carrinho</button>
             </div>
             <div class="product-card">
                 <img src="./img/b450m-steel-legend-ddr4.jpg" alt="Produto 1">
-                <h3>Produto 1</h3>
+                <h3>Placa Mãe Steel Legend B450M</h3>
                 <p>Descrição do Produto 1.</p>
-                <p class="price">R$ 999,99</p>
+                <p class="price">R$ 750,00</p>
                 <button class="add-to-cart">Adicionar ao Carrinho</button>
             </div>
             <!-- Repita os blocos de product-card para cada produto -->
