Atualização carrossel, criação departamento, atualizado cadastroProduto e updateProduto

--- a/adm/UpdateProduto.html
+++ b/adm/UpdateProduto.html
@@ -26,7 +26,9 @@
                     <th>Nome do Produto</th>
                     <th>Descrição</th>
                     <th>Preço Unitário</th>
-                    <th>imagem</th>
+                    <th>Imagem</th>
+                    <th>Departamento</th>
+                    <th>Categoria</th>
                     <th>Ações</th>
                 </tr>
             </thead>
