--- a/adm/cadastroProduto.html
+++ b/adm/cadastroProduto.html
@@ -56,6 +56,13 @@
                 <input type="text" class="form-control" name="imagemProduto" id="imagemProduto"
                     placeholder="Cole a URL da imagem" required>
             </div>
+            <div class="form-group">
+                <label for="idDepartamento"><strong>Departamento do Produto</strong></label>
+                <select class="form-control" name="idDepartamento" id="idDepartamento" required>
+                    <option value="">Selecione o Departamento</option>
+                </select>
+            </div>
+            
 
 
             <button type="submit" class="btn-primary">Cadastrar Produto</button>
