--- a/admin.html
+++ b/admin.html
@@ -18,6 +18,7 @@
         <h1>Tela Inicial</h1>
         <div class="buttons">
             <a href="./adm/cadastroProduto.html" class="btn">Cadastro de Produtos</a>
+            <a href="./adm/cadastroDepartamento.html" class="btn">Cadastro de Departamentos</a>
             <a href="adm/UpdateProduto.html" class="btn">Configurações dos Produtos</a> 
             <a href="./adm/listagemPedido.html" class="btn">Listagem de Pedidos</a>
         </div>
