--- a/index.html
+++ b/index.html
@@ -36,43 +36,11 @@
     <section class="carousel">
         <h2>Produtos em Destaque</h2>
         <div class="product-carousel">
-            <div class="product-slide">
-                <img src="./img/61eAnU6ggkL._AC_SX522_.jpg" alt="Produto 1">
-                <!-- <h3>Produto 1</h3>
-                <p>Descrição do Produto 1.</p>
-                <p class="price">R$ 999,99</p>
-                <button class="add-to-cart">Adicionar ao Carrinho</button> -->
-            </div>
-            <div class="product-slide">
-                <img src="./img/gabinete-gamer-hyrax-hgb720-mid-tower-atx-frente-e-lateral-em-vidro-temperado-branco-hgb720w_1688578035_g.jpg" alt="Produto 2">
-                <!--
-                <h3>Produto 2</h3>
-                <p>Descrição do Produto 2.</p>
-                <p class="price">R$ 1499,99</p>
-                <button class="add-to-cart">Adicionar ao Carrinho</button> -->
-            </div>
-            <div class="product-slide">
-                <img src="./img/monitor-gamer-superframe-vision-ultra-34-pol-curvo-ultrawide-25k-quad-hd-va-99-srgb-hdr-freesync-1ms-165hz-hdmidp-white-sfvc-3415-2_174751.jpg" alt="Produto 2">
-                <!-- <h3>Produto 3</h3>
-                <p>Descrição do Produto 2.</p>
-                <p class="price">R$ 1499,99</p>
-                <button class="add-to-cart">Adicionar ao Carrinho</button>-->
-            </div>
-            <div class="product-slide">
-                <img src="./img/monitor-gamer-superframe-vision-ultra-34-pol-quad-hd-ips-g-syncfreesync-1ms-165hz-hdmidp-sfv3415_148624.webp" alt="Produto 2">
-                <!-- <h3>Produto 4</h3>
-                <p>Descrição do Produto 2.</p>
-                <p class="price">R$ 1499,99</p>
-                <button class="add-to-cart">Adicionar ao Carrinho</button> -->
-            </div>
-            <div class="product-slide">
-                <img src="./img/61CTe9lywcL._AC_SX522_.jpg" alt="Produto 2">
-                <!-- <h3>Produto 5</h3>
-                <p>Descrição do Produto 2.</p>
-                <p class="price">R$ 1499,99</p>
-                <button class="add-to-cart">Adicionar ao Carrinho</button> -->
-            </div>
+            <!-- Espaço reservado para produtos que serão inseridos dinamicamente -->
+        </div>
     </section>
+    
+    
 
     <section class="products">
         <h2>Mais vendidos</h2>
